--- a/index.html
+++ b/index.html
@@ -15,5 +15,14 @@
     Для этого на данном сайте я буду практиковаться с HTML тегами и их атрибутами,
     стилями CSS с их селекторами, а также с синтаксисом и логикой JavaScript.
     </p>
+    <h2>План действий</h2>
+    <ul>
+        <li>
+            <a href="pages/html_layout.html">Верстка</a>
+        </li>
+
+
+
+    </ul>
 </body>    
 </html>
