--- a/pages/html_layout.html
+++ b/pages/html_layout.html
@@ -5,6 +5,26 @@
     <title>Об HTML в верстке</title>
 </head>
 <body>
-    <a href="../index.html">Главная страница</a>
+    <h1>О языке HTML</h1>
+    <p>
+        HTML - это язык разметки, для более подробной информацией
+        <a href="https://ru.wikipedia.org/wiki/HTML">сюда.</a>
+        За официальной информацией о тегах
+        <a href="https://developer.mozilla.org/ru/docs/Web/HTML">сюда.</a>
+        А за неофициальной, но удобной информацией
+        <a href="https://htmlbook.ru/html">сюда.</a>
+    </p>
+    <ul>
+        <li>
+            <a href="../index.html">Главная страница</a>
+        </li>
+        <li>
+        <a href="css_layout.html">CSS оформление</a>
+        </li>
+    
+        <li>
+        <a href="js_coding.html">JS программирование </a>
+        </li>
+    </ul>
 </body>
 </html>
