--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
     <h2>План действий</h2>
     <ul>
         <li>
-            <a href="pages/html_layout.html">Верстка</a>
+            <a href="pages/html_layout.html">HTML верстка</a>
         </li>
-        <li>2</li>
-        <li>3</li>
+        <li>
+            <a href="css_layout.html">CSS оформление</a>
+        </li>
+        <li>
+            <a href="js_coding.html">JS программирование</a>
+        </li>
     </ul>
 </body>    
 </html>
