--- a/pages/html_layout.html
+++ b/pages/html_layout.html
@@ -2,29 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Об HTML в верстке</title>
+    <title>О языке HTML</title>
 </head>
 <body>
     <h1>О языке HTML</h1>
-    <p>
-        HTML - это язык разметки, для более подробной информацией
-        <a href="https://ru.wikipedia.org/wiki/HTML">сюда.</a>
-        За официальной информацией о тегах
-        <a href="https://developer.mozilla.org/ru/docs/Web/HTML">сюда.</a>
-        А за неофициальной, но удобной информацией
-        <a href="https://htmlbook.ru/html">сюда.</a>
+    <h2>Общие сведения</h2>
+    <p>Язык HTML отвечает за структуру и содержание страницы. Он состоит из команд, которые называются тегами.
+     Любой тег состоит из имени, заключённого между знаками «меньше» и «больше». Примеры тегов:< h1 >, < p >, < ul > .
+     При этом все теги подразделяются на: парные, обрабатывающие фрагмент текста, и одиночные, применимые ко всей странице.
+    Более подробная информация о языке на <a href="https://ru.wikipedia.org/wiki/HTML">wikipedia</a> или официальной странице <a href="https://www.w3.org/"> The World Wide Web Consortium (W3C)</a>>.
+     Но удобнее пользоваться просто сайтом <a href="http://htmlbook.ru/">htmlbook.ru</a>.
     </p>
-    <ul>
-        <li>
-            <a href="../index.html">Главная страница</a>
-        </li>
-        <li>
-        <a href="css_layout.html">CSS оформление</a>
-        </li>
-    
-        <li>
-        <a href="js_coding.html">JS программирование </a>
-        </li>
-    </ul>
+    <p>Здесь же я оставлю маленькую шпаргалку по основным тегам.</p>
 </body>
 </html>
