--- a/pages/html_layout.html
+++ b/pages/html_layout.html
@@ -1,18 +1,61 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>О языке HTML</title>
+    <script src="script.js"></script>
+    <title>Document</title>
 </head>
 <body>
-    <h1>О языке HTML</h1>
-    <h2>Общие сведения</h2>
-    <p>Язык HTML отвечает за структуру и содержание страницы. Он состоит из команд, которые называются тегами.
-     Любой тег состоит из имени, заключённого между знаками «меньше» и «больше». Примеры тегов:< h1 >, < p >, < ul > .
-     При этом все теги подразделяются на: парные, обрабатывающие фрагмент текста, и одиночные, применимые ко всей странице.
-    Более подробная информация о языке на <a href="https://ru.wikipedia.org/wiki/HTML">wikipedia</a> или официальной странице <a href="https://www.w3.org/"> The World Wide Web Consortium (W3C)</a>>.
-     Но удобнее пользоваться просто сайтом <a href="http://htmlbook.ru/">htmlbook.ru</a>.
-    </p>
-    <p>Здесь же я оставлю маленькую шпаргалку по основным тегам.</p>
+    <table border="1" width="100%">
+        <tr>
+            <td rowspan="2"> 
+                <img src="images/123.png"> 
+            </td>
+            <td rowspan="2">Название</td>
+            <td colspan="2">Логин</td>
+        </tr>
+        <tr>
+            <td colspan="2">Пароль</td>
+        </tr>
+        <tr>
+            <td colspan="3">
+                 <p>Навигация</p>
+            </td>
+        </tr>
+        <tr>
+            <td rowspan="2">
+                <ul>
+                    <li>
+                        <a href="">Главная страница</a>
+                    </li>
+                    <li>
+                        <a href="css_layout.html">CSS оформление</a>
+                    </li>
+                    <li>
+                        <a href="js_coding.html">JS программирование</a>
+                    </li>
+                </ul>
+            </td>
+            <td>
+                <p>
+                    Использование таблиц с невидимой границей — известный способ верстки, применяемый на множестве сайтов.
+                    Такая таблица фактически представляет собой модульную сетку, в которой удобно размещать отдельные элементы веб-страницы. 
+                    Простота и быстрота верстки, а также корректное отображение в различных браузерах — вот основные преимущества табличной верстки.
+                    Благодаря универсальности таблиц и большому числу параметров, управляющих их видом, таблицы надолго стали определенным стандартом для верстки веб-страниц. 
+                    Таблица с невидимой границей представляет собой словно модульную сетку, в блоках которой удобно размещать элементы веб-страницы.
+                </p>
+                <p>Тем не менее это не совсем правильный подход, ведь каждый объект HTML определен для своих собственных целей и если он используется не по назначению, причем повсеместно, 
+                    это значит, что альтернатив нет.
+                     Так оно и было долгое время, пока на смену таблицам при верстке сайтов не пришли слои.
+                    Это не значит, что слои теперь используются сплошь и рядом, но наметилась четкая тенденция — таблицы применяются для размещения табличных данных, а слои — для верстки и оформления.
+                </p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <p>Подвал</p>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
