--- a/pages/html_layout.html
+++ b/pages/html_layout.html
@@ -26,7 +26,7 @@
             <td rowspan="2">
                 <ul>
                     <li>
-                        <a href="">Главная страница</a>
+                        <a href="site/index.html">Главная страница</a>
                     </li>
                     <li>
                         <a href="css_layout.html">CSS оформление</a>
