--- a/pages/html_layout.html
+++ b/pages/html_layout.html
@@ -6,21 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="1" width="100%">
+    <table border="1" widthh="100%" height="100%">
         <tr>
             <td rowspan="2"> 
                 <img src="images/123.png"> 
             </td>
             <td rowspan="2">Название</td>
-            <td colspan="2">Логин</td>
+            <td colspan="1">Логин</td>
         </tr>
         <tr>
-            <td colspan="2">Пароль</td>
+            <td colspan="1">Пароль</td>
+
         </tr>
         <tr>
             <td colspan="3">
                  <p>Навигация</p>
             </td>
+ 
         </tr>
         <tr>
             <td rowspan="2">
@@ -36,7 +38,7 @@
                     </li>
                 </ul>
             </td>
-            <td>
+            <td colspan="2">
                 <p>
                     Использование таблиц с невидимой границей — известный способ верстки, применяемый на множестве сайтов.
                     Такая таблица фактически представляет собой модульную сетку, в которой удобно размещать отдельные элементы веб-страницы. 
@@ -52,10 +54,10 @@
             </td>
         </tr>
         <tr>
-            <td>
+            <td colspan="2">
                 <p>Подвал</p>
             </td>
-        </tr>
+            </tr>
     </table>
 </body>
 </html>
