--- a/pages/html_layout.html
+++ b/pages/html_layout.html
@@ -9,7 +9,7 @@
     <table border="1" widthh="100%" height="100%">
         <tr>
             <td rowspan="2"> 
-                <img src="images/123.png"> 
+                <img src="site/pages/123.png"> 
             </td>
             <td rowspan="2">Название</td>
             <td colspan="1">Логин</td>
